
As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!

2.0.0.2012
----------
- Fix bug which prevented a system from going to sleep if automatic refreshes are enabled.
- Stepping through article lists does not refresh the article pane until the steps complete.
- Completed all localisation fixes.

2.0.0.2011
----------
- Added option to export subscriptions with groups or as a flat file.
- Refresh when the system awakes from sleep if the refresh frequency is not set to manual.
- Added German Localisation. (Thanks to Jan Kampling).
- Improved handling of invalid styles.
- Vienna can now download files. A new Downloads window has been added which tracks the file
  downloads. The downloads folder can now be configured via Preferences.
- Added "Mark All Subscriptions as Read" command. (Thanks to Yann Bizeul).
- Incorporated patches from Yann Bizeul and Adam Hammer.
- Close button on tabs now depress and highlight properly.
- New Preferences UI.
- Font selection in Preferences changed to use the standard OS font picker.
- Add an option to disable feed folder images in the folders list.
- Moved unread count on application icon to the top right corner to be consistent with most
  other Mac OSX applications.
- Support dragging URL strings from other applications into the folders pane.
- Support dropping script files (.scpt) on the application icon to install them to the Vienna
  script folder and add them to the Scripts menu.

2.0.0.2010
----------
- Added auto-expire support. Articles older than a given number of days can be automatically moved
  to the trash folder.
- Handle RDF:Sequence parsing for feeds such as http://www.kongisking.net. This ensures that
  feeds are properly organised by date in the absence of any date in the feed.
- Smart folder dates fields are now fixed strings representing a time range rather than an actual date.